--- a/application/modules/default/views/scripts/appraisalself/index.phtml
+++ b/application/modules/default/views/scripts/appraisalself/index.phtml
@@ -39,6 +39,8 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 	$skill_res = $this->skill_response;
 	
 	$appStatus = $empRatData[0]['appraisal_status'];
+	if($appStatus == 'Pending L1 ratings')
+	    $appStatus = 'Pending line manager ratings';
 	
 	$curent_level = array_search($appStatus, $app_status_array);
 	
@@ -69,18 +71,17 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 				<div class="lis_div"><span>Business Unit : </span><?php echo $empRatData[0]['businessunit_name'];?></div>
 				<div class="lis_div"><span>Department :</span> <?php echo $empRatData[0]['department_name'];?></div>
 				</div>
-				<div class="appraisal_due_date"><span>Due Date :</span> <?php echo sapp_Global::change_date($empRatData[0]['employees_due_date'],'view');?></div>
+                <?php if($appStatus != APP_PENDING_EMP_FINAL){ ?>
+				    <div class="appraisal_due_date"><span>Due Date :</span> <?php echo sapp_Global::change_date($empRatData[0]['employees_due_date'],'view');?></div>
+                <?php } ?>
 				<?php /*if($appStatus == APP_PENDING_EMP){?>
 				<div class="new-form-ui-submit employee_appraisal_submit">
 					<input type="button" value="Edit" onclick="window.location.href='<?php echo BASE_URL; ?>appraisalself/edit';" />
 				</div>
 				<?php }*/?>
-				<div class="appril_sel_stat_comp_msg">
-					<?php if($empRatData[0]['appraisal_status']=='Completed') {  ?>
-						<span class="label_10">Appraisal Status : </span><div class="appr_completed"><span>Completed</span></div>
-					<?php }?>
-						
-				</div>
+                <div class="appril_sel_stat_comp_msg">
+                    <span class="label_10">Appraisal Status : </span><div class="appr_completed"><span><?php echo $appStatus; ?></span></div>
+                </div>
 				<div class="new-form-ui-submit employee_appraisal_submit" style="top: 2px; right: 6px; position: absolute;">
 						<input type="button" class="rating_help_txt" value="Ratings Definition" onclick="checkratingstext();"/>
 				</div>
